--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><button class="black-btn" >Home</button></li>
+        <li><button class="black-btn" >Skills</button></li>
+        <li><button class="black-btn" >Contact</button></li>
       </ul>
     </nav>
   </header>
