--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main class="MainSection">
     <div class="about_me">
       <div class="text_section">
-        <h1>"hello world!"</h1>
+        <h1>"Hello world!"</h1>
         <h3>My name is Youssef</h3>
       </div>
       
