--- a/index.html
+++ b/index.html
@@ -26,21 +26,40 @@
   <main class="MainSection">
     <div class="about_me">
       <div class="text_section">
-        <h1>"Hello world!"</h1>
+        <h1>"hello world!"</h1>
         <h3>My name is Youssef</h3>
       </div>
       
+      <div class="button_section">
+        <button class="blue-btn" >more details</button>
+      </div>
+    </div>
+
+
+    <div class="who_me">
+      <div class="text_section">
+        <p>My name is Youssef. I am 14 years old and trying to learn Python from the Codezilla course. I am also looking to    gain experience with other programming languages</p>
+      </div>
+
       <div class="button_section">
         <button class="blue-btn" >My Skills</button>
       </div>
     </div>
 
     <div class="skills">
-      <div class="text_section">
-        <h1>"My skills"</h1>
-      </div>
-      <div class="image_section">
-         <img src="images/skills.png">
+      <div class="skills_section">
+        <div class="subtitle">
+            <p>Python 60%</p>
+            <p>Html 10%</p>
+            <p>Css 10%</p>
+            <p>Assembly 5%</p>
+        </div>
+        <div class="blocks">
+            <div id="block1"></div>
+            <div id="block2"></div>
+            <div id="block3"></div>
+            <div id="block4"></div>
+        </div>
       </div>
 
       <div class="button_section">
